classDiagram
    %% Spatie Laravel Permission Entities (Logical Representation)
    class Role {
        +int id
        +string name
        +string guard_name
    }
    class Permission {
        +int id
        +string name
        +string guard_name
    }

    %% Core Domain Entities
    class User {
        +int id
        +string nom
        +string prenom
        +string email
        +string password
        +string telephone
        +string cin
        +string ville
        +date date_entree
        +date date_sortie
        +string notes
        +boolean is_active
        +datetime email_verified_at
    }

    class Immeuble {
        +int id
        +string nom
        +string adresse
        +string ville
        +int nombre_etages
        +int nombre_appartements
        +string image
    }

    class Appartement {
        +int id
        +string numero
        +int etage
    }

    class AppartementUser {
        +int id
        +string type_resident
        +date date_entree
    }

    class Charge {
        +int id
        +string titre
        +float montant
        +date date_echeance
        +string statut
    }

    class Paiement {
        +int id
        +float montant
        +date date_paiement
        +string statut
        +string recu_path
    }

    class Depense {
        +int id
        +string titre
        +text description
        +float montant
        +date date_depense
        +string justificatif_path
    }

    class Incident {
        +int id
        +string titre
        +text description
        +string priorite
        +string statut
    }

    class Annonce {
        +int id
        +string titre
        +text contenu
    }

    class Document {
        +int id
        +string titre
        +string fichier_path
        +string categorie
    }

    class Notification {
        +int id
        +string titre
        +text message
        +string type
        +boolean lu
        +datetime date_envoi
    }

    class AuditLog {
        +int id
        +string action
        +json modifications
    }

    %% Relationships
    User "*" -- "*" Role : "has"
    Role "*" -- "*" Permission : "has"
    User "*" -- "*" Permission : "direct permissions"
    
    User "0..1" -- "0..*" Immeuble : "manages (Syndic)"
    Immeuble "1" -- "0..*" Appartement : "contains"
    
    User "1" -- "0..*" AppartementUser : "occupies"
    Appartement "1" -- "0..*" AppartementUser : "belongs to"
    
    Appartement "1" -- "0..*" Charge : "assigned to"
    Charge "1" -- "0..*" Paiement : "has"
    User "1" -- "0..*" Paiement : "makes"
    
    User "1" -- "0..*" Incident : "reports"
    Immeuble "1" -- "0..*" Incident : "occurs in"
    
    User "1" -- "0..*" Annonce : "creates"
    Immeuble "1" -- "0..*" Annonce : "displayed for"
    
    Immeuble "1" -- "0..*" Document : "related to"
    Charge "0..1" -- "0..*" Document : "has (invoices/receipts)"
    Immeuble "1" -- "0..*" Depense : "incurs"

    User "1" -- "0..*" Notification : "receives"
    User "0..1" -- "0..*" AuditLog : "triggers (recorded actions)"
